--- a/app.json
+++ b/app.json
@@ -21,7 +21,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ashhad7878.Employee_Management_App"
     },
     "scheme": "your-app-scheme",
     "web": {
@@ -29,6 +30,14 @@
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "e2f24d11-f696-4ebf-a5b9-800061696be3"
+      }
+    }
   }
 }
