--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
@@ -16,12 +17,15 @@
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-get-random-values": "~1.9.0",
+    "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "@expo/webpack-config": "^19.0.0"
+    "react-native-toast-message": "^2.2.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
